--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a href="#" class="nav-link">Nos produits</a>
+                    <a href="{{path("product")}}" class="nav-link">Nos produits</a>
                 </li>
                 <li class="nav-item active">
                     <a href="#" class="nav-link">Qui sommes-nous ?</a>
