--- a/public/assets/css/boutique.css
+++ b/public/assets/css/boutique.css
@@ -10,3 +10,26 @@
   background-color: #dfeaff;
   padding-top: 25px;
 }
+.product-item {
+  margin-top: 50px;
+}
+.product-item h5 {
+  text-transform: uppercase;
+  font-size: 15px;
+  margin-bottom: 1px;
+}
+.product-item .product-subtitle {
+  font-size: 14px;
+  display: block;
+  margin-bottom: 10px;
+}
+.product-item .product-price {
+  font-size: 15px;
+  font-weight: bold;
+}
+.product-container {
+  margin-bottom: 125px;
+}
+.product-page-price {
+  font-size: 16px;
+}
