--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,19 +1,21 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Produits{% endblock %}
-
-{% block content %}
-<h1>Nos produits</h1>
-<div class="row">
-{% for products in product  %}
-    <div class="col-md-4">
-        <div class="product-item">
-        <img src="/assets/images/{{products.illustration}}" alt="{{products.name}}" class="img-fluid">
-            <h5>{{products.name}}</h5>
-            <span> {{products.subtitle}} </span>
-            {{products.price}}
-        </div>
-    </div>
-{% endfor %}
-</div>
+{% block title %}Produits
+{% endblock %}
+{% block
+content %}
+	<h1>Nos produits</h1>
+	<div class="row product-container">
+		{% for products in product %}
+			<div class="col-md-4">
+				<div class="product-item text-center">
+					<a href="{{path("product",{slug:products.slug})}}"><img src="/assets/images/{{ products.illustration }}" alt="{{ products.name }}" class="img-fluid"/></a>
+					<h5>{{ products.name }}</h5>
+					<span class="product-subtitle">
+						{{ products.subtitle }}
+					</span>
+					<span class="product-price">{{ (products.price /100)|number_format(2,",",".") }} €</span> 
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endblock %}
