--- a/public/assets/css/boutique.css
+++ b/public/assets/css/boutique.css
@@ -1,10 +1,13 @@
+body {
+  position: relative;
+}
 .navbar-item-custom a,
 .navbar-item-custom {
   color: white;
 }
 .footer-custom {
   text-align: center;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   background-color: #dfeaff;
