--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,7 +3,13 @@
 {% endblock %}
 {% block
 content %}
-	<h1>Nos produits</h1>
+	<div class="row">
+		<div class="col-md-3">
+			<h3>Filtrer</h3>
+			{{form(form)}}
+		</div>
+		<div class="col-md-9">
+			<h3>Nos produits</h3>
 	<div class="row product-container">
 		{% for products in product %}
 			<div class="col-md-4">
@@ -18,4 +24,7 @@ content %}
 			</div>
 		{% endfor %}
 	</div>
+		</div>
+	</div>
+	
 {% endblock %}
