--- a/public/assets/css/boutique.css
+++ b/public/assets/css/boutique.css
@@ -8,7 +8,7 @@ body {
 .footer-custom {
   text-align: center;
   position: absolute;
-  bottom: 0;
+  bottom: -100px;
   width: 100%;
   background-color: #dfeaff;
   padding-top: 25px;
@@ -35,4 +35,8 @@ body {
 }
 .product-page-price {
   font-size: 16px;
+}
+.cart-icon {
+  height: 20px;
+  padding-left: 10px;
 }
