--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
                 <a href="{{path('account')}}">Mon Compte <small>({{app.user.firstname}})</small></a> |
                 <a href="{{path('app_logout')}}">Déconnexion</a>
             {% endif %}
+                <a href="{{path('cart')}}"><img src="{{asset("assets/icon/shopping-cart.png")}}" alt="panier" class="cart-icon"></a>
             </div>
         </div>
     </nav>
