--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -1,20 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CartController!{% endblock %}
+{% block title %}Panier{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/DWWM14/Desktop/TestSymfony/ecommerce/src/Controller/CartController.php'|file_link(0) }}">src/Controller/CartController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/DWWM14/Desktop/TestSymfony/ecommerce/templates/cart/index.html.twig'|file_link(0) }}">templates/cart/index.html.twig</a></code></li>
-    </ul>
+{% block content %}
+    <h1>Mon panier</h1>
+    Retrouvez l'ensemble des produits que vous avez ajouté à votre panier <br>
+{% if cart|length > 0 %}
+    <table class="table mt-3">
+  <thead>
+    <tr>
+      <th scope="col">Produit</th>
+      <th scope="col"></th>
+      <th scope="col">Quantité</th>
+      <th scope="col">Prix</th>
+      <th scope="col">Total</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+    {% set total = null %}
+    {% set number = null %}
+    {% for product in cart %}
+        
+      <th>
+      <img src="/assets/images/{{ product.product.illustration }}" alt="{{product.product.name}}" height="75px"><br>
+      
+      </th>
+      <td>
+      {{product.product.name}} <br>
+      <small>{{product.product.subtitle}}</small>
+      </td>
+      <td>
+      <a href="{{path('decrease_to_cart',{'id' :product.product.id})}}"><img src="{{asset('assets/icon/moins.png')}}" height="12px" alt="Retirer"></a>
+      x{{product.quantity}}
+      <a href="{{path('add_to_cart',{'id': product.product.id})}}"><img src="{{asset('assets/icon/plus.png')}}" height="12px" alt=""></a>
+      </td>
+      <td>{{(product.product.price /100)|number_format(2,",",".")}} €</td>
+      <td>{{((product.product.price*product.quantity)/100)|number_format(2,",",".")}} €</td>
+      <td><a href="{{path("delete_to_cart",{'id' : product.product.id})}}"><img src="{{asset('assets/icon/trash.png')}}" alt="Supprimer" height="20px"></a></td>
+    </tr>
+    {% set total = total + (product.product.price * product.quantity) %}
+    {% set number = number + (product.quantity) %}
+    {% endfor %}
+  </tbody>
+</table>
+<div class="text-right mb-5">
+    <b>Nombre de produit :</b> {{number}} <br>
+    <b>Total de mon panier :</b>{{(total / 100)|number_format(2,",",".")}} €
+    <a href="" class="btn btn-success btn-block">Valider mon panier</a>
 </div>
+{% else %}
+    <hr>
+    <p><b>Votre panier est vide</b></p>
+{% endif %}
 {% endblock %}
