--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,10 +1,9 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Mon compte{% endblock %}
-
-{% block content %}
+{% extends 'base.html.twig' %} {% block title %}Mon compte{% endblock %} {%
+block content %}
 <h1>Mon compte</h1>
-Bienvenue {{app.user.firstname}} dans votre espace client. <br>C'est dans cet espace que vous allez gérer vos informations personnelles.
-<hr>
-<a href="{{path('account_password')}}">Modifier mon mot de passe</a><br>
+Bienvenue {{ app.user.firstname }} dans votre espace client. <br />C'est dans
+cet espace que vous allez gérer vos informations personnelles.
+<hr />
+-<a href="{{ path('account_password') }}">Modifier mon mot de passe</a><br />
+-<a href="{{ path('account_address') }}">Gérer mes adresses</a>
 {% endblock %}
