--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -48,7 +48,7 @@
 <div class="text-right mb-5">
     <b>Nombre de produit :</b> {{number}} <br>
     <b>Total de mon panier :</b>{{(total / 100)|number_format(2,",",".")}} €
-    <a href="" class="btn btn-success btn-block">Valider mon panier</a>
+    <a href="{{path('order')}}" class="btn btn-success btn-block">Valider mon panier</a>
 </div>
 {% else %}
     <hr>
