--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block content %}
+<div class="small-block">
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -23,22 +24,13 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-info btn-block mt-3" type="submit">
         Valider
     </button>
     {% endif %}
-
+    <hr>
+    <p class="text-center"><a href="{{path('register')}}">Créer un compte</a></p>
     
-</form>
+</form> 
+</div>
 {% endblock %}
