--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -7,11 +7,32 @@
     <p>Choississez vos préférences avant de passer votre commande sur la boutique</p>
     <div class="row">
         <div class="col-md-6">
-            <b>Choisir l'adresse de livraison</b><br>
-            <b>Choisir la livraison</b>
+            {% set formHtml %}
+            {{form_start(form,{action:path('order_recap')})}}
+                {{form_label(form.address,"Choississez une adresse de livraison")}}
+                <a href="{{path('account_address_add')}}">Ajouter une adresse</a>
+            {{form_end(form)}}
+            {% endset %}
+            {{formHtml|replace({'[br]': '<br>'})|raw}}
         </div>
         <div class="col-md-6">
             <b>Récapitulatif</b><br>
+            <div class="order-summary">
+            {% for key,product in cart %}
+            <div class="row {% if key > 0 %} mt-2 {% endif %}">
+                <div class="col-2 my-auto">
+                    <img src="/assets/images/{{ product.product.illustration }}" alt="{{product.product.name}}" height="75px"><br>
+                </div>
+                <div class="col-8">
+                    {{product.product.name}} <br>
+                    <small>{{product.product.subtitle}}</small>
+                </div>
+                <div class="col-2 my-auto">
+                    x{{product.quantity}}
+                </div>
+            </div>
+            {% endfor %}
+            </div>
             <b>Payer</b>
         </div>
     </div>
