--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -46,7 +46,7 @@
             <strong>Livraison :</strong>{{carrier.price|number_format(2,",",".")}} €
             <hr>
             <strong>Total :</strong>{{(total / 100 + carrier.price)|number_format(2,",",".")}} €
-            <a href="" class="btn btn-success btn-block mt-3">Payer | {{(total / 100 + carrier.price)|number_format(2,",",".")}} €</a>
+               <a href="{{ path('stripe_create_session',{'reference':reference})}}" class="btn btn-success btn-block mt-3">Payer | {{ ((total / 100) + carrier.price) | number_format(2, ',', '.') }} €</a>
         </div>
     </div>
 {% endblock %}
