--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -5,5 +5,6 @@ Bienvenue {{ app.user.firstname }} dans votre espace client. <br />C'est dans
 cet espace que vous allez gérer vos informations personnelles.
 <hr />
 -<a href="{{ path('account_password') }}">Modifier mon mot de passe</a><br />
--<a href="{{ path('account_address') }}">Gérer mes adresses</a>
+-<a href="{{ path('account_address') }}">Gérer mes adresses</a><br>
+-<a href="{{ path('account_order') }}">Mes commandes</a>
 {% endblock %}
