--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -11,5 +11,5 @@
         Votre commande sera livré par {{order.carriername}} à l'adresse suivante : <br> {{order.delivery|raw}}
     </p>
     <hr>
-    Pour suivre votre commande, rendez-vous dans votre <a href="{{path('account')}}">compte</a>
+    Pour suivre votre commande, rendez-vous dans votre <a href="{{path('account_order')}}">compte</a>
 {% endblock %}
