--- a/templates/account/order.html.twig
+++ b/templates/account/order.html.twig
@@ -15,6 +15,7 @@ C'est dans cet espace que vous allez pouvoir gérer vos commandes. <br>
   <thead>
     <tr>
       <th scope="col">Référence</th>
+      <th scope='col'>Statut</th>
       <th scope="col">Date</th>
       <th scope="col">Produit(s)</th>
       <th scope="col">Total</th>
@@ -25,6 +26,15 @@ C'est dans cet espace que vous allez pouvoir gérer vos commandes. <br>
         {% for order in orders %}
     <tr>
       <td><span class='badge badge-secondary'>{{order.reference}}</span></td>
+      <td>
+        {% if order.state == 1 %}
+          Paiement accepté
+        {% elseif order.state == 2 %}
+          Préparation
+        {% elseif order.state == 3 %}
+          Livraison en cours
+        {% endif %}
+      </td>
       <td> {{order.createdAt|date('d/m/Y')}} </td>
       <td> {{order.orderDetails|length}} </td>
       <td> {{(order.carrierprice + order.getTotal /100) | number_format(2,',','.')}} €</td>
