--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -15,7 +15,16 @@
 			<p>{{oneProduct.description}}</p>
 			<hr>
 			<a href=" {{path("add_to_cart", {'id':oneProduct.id})}} " class="btn btn-primary">Ajouter au panier</a>
-			
 		</div>
 	</div>
+	<hr>
+	<h3>Nos meilleurs ventes</h3>
+        <p>Découvrez nos articles les plus vendus</p>
+        <div class="row">
+            {% for products in products %}
+                <div class="col-md-3">    
+                    {% include "product/single_product.html.twig" %}
+                </div>
+            {% endfor %}
+        </div>
 {% endblock %}
