--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -46,7 +46,7 @@
                     <a href="#" class="nav-link">Qui sommes-nous ?</a>
                 </li>
                 <li class="nav-item active">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="{{path('contact')}}" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="navbar-item-custom">
